// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeekViewBarItem renders correctly with rehearsals 1`] = `
<a
  className="item"
  onClick={[Function]}
>
  <div
    className="ui list"
    role="list"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <div
      className="item"
      data-value={undefined}
      onClick={[Function]}
      role="listitem"
    >
      <div
        className="description"
      >
        T
      </div>
      <h3
        className="header"
      >
        16
      </h3>
      <div
        className="description"
      >
        <i
          aria-hidden="true"
          className="blue circle tiny icon"
        />
      </div>
    </div>
  </div>
</a>
`;

exports[`WeekViewBarItem renders correctly without rehearsals 1`] = `
<a
  className="item"
  onClick={[Function]}
>
  <div
    className="ui list"
    role="list"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <div
      className="item"
      data-value={undefined}
      onClick={[Function]}
      role="listitem"
    >
      <div
        className="description"
      >
        S
      </div>
      <h3
        className="header"
      >
        14
      </h3>
      <div
        className="description"
      >
        <i
          aria-hidden="true"
          className="grey circle tiny icon"
        />
      </div>
    </div>
  </div>
</a>
`;
